feat: add workload list
