# ts-client/enreach.workload/api.swagger.yml
@@ -35,6 +35,141 @@ paths:
                   additionalProperties: {}
       tags:
         - Query
+  /enreach/workload/workload:
+    get:
+      operationId: Query_WorkloadAll
+      responses:
+        '200':
+          description: A successful response.
+          schema:
+            type: object
+            properties:
+              Workload:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: string
+                      format: uint64
+                    epoch:
+                      type: string
+                      format: uint64
+                    minerId:
+                      type: string
+                    score:
+                      type: string
+                      format: uint64
+                    managerId:
+                      type: string
+                    creator:
+                      type: string
+              pagination:
+                type: object
+                properties:
+                  next_key:
+                    type: string
+                    format: byte
+                  total:
+                    type: string
+                    format: uint64
+        default:
+          description: An unexpected error response.
+          schema:
+            type: object
+            properties:
+              code:
+                type: integer
+                format: int32
+              message:
+                type: string
+              details:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    '@type':
+                      type: string
+                  additionalProperties: {}
+      parameters:
+        - name: pagination.key
+          in: query
+          required: false
+          type: string
+          format: byte
+        - name: pagination.offset
+          in: query
+          required: false
+          type: string
+          format: uint64
+        - name: pagination.limit
+          in: query
+          required: false
+          type: string
+          format: uint64
+        - name: pagination.count_total
+          in: query
+          required: false
+          type: boolean
+        - name: pagination.reverse
+          in: query
+          required: false
+          type: boolean
+      tags:
+        - Query
+  /enreach/workload/workload/{id}:
+    get:
+      operationId: Query_Workload
+      responses:
+        '200':
+          description: A successful response.
+          schema:
+            type: object
+            properties:
+              Workload:
+                type: object
+                properties:
+                  id:
+                    type: string
+                    format: uint64
+                  epoch:
+                    type: string
+                    format: uint64
+                  minerId:
+                    type: string
+                  score:
+                    type: string
+                    format: uint64
+                  managerId:
+                    type: string
+                  creator:
+                    type: string
+        default:
+          description: An unexpected error response.
+          schema:
+            type: object
+            properties:
+              code:
+                type: integer
+                format: int32
+              message:
+                type: string
+              details:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    '@type':
+                      type: string
+                  additionalProperties: {}
+      parameters:
+        - name: id
+          in: path
+          required: true
+          type: string
+          format: uint64
+      tags:
+        - Query
 definitions:
   Any:
     type: object
@@ -58,6 +193,84 @@ definitions:
             '@type':
               type: string
           additionalProperties: {}
+  PageRequest:
+    type: object
+    properties:
+      key:
+        type: string
+        format: byte
+      offset:
+        type: string
+        format: uint64
+      limit:
+        type: string
+        format: uint64
+      count_total:
+        type: boolean
+      reverse:
+        type: boolean
+  PageResponse:
+    type: object
+    properties:
+      next_key:
+        type: string
+        format: byte
+      total:
+        type: string
+        format: uint64
+  QueryAllWorkloadResponse:
+    type: object
+    properties:
+      Workload:
+        type: array
+        items:
+          type: object
+          properties:
+            id:
+              type: string
+              format: uint64
+            epoch:
+              type: string
+              format: uint64
+            minerId:
+              type: string
+            score:
+              type: string
+              format: uint64
+            managerId:
+              type: string
+            creator:
+              type: string
+      pagination:
+        type: object
+        properties:
+          next_key:
+            type: string
+            format: byte
+          total:
+            type: string
+            format: uint64
+  QueryGetWorkloadResponse:
+    type: object
+    properties:
+      Workload:
+        type: object
+        properties:
+          id:
+            type: string
+            format: uint64
+          epoch:
+            type: string
+            format: uint64
+          minerId:
+            type: string
+          score:
+            type: string
+            format: uint64
+          managerId:
+            type: string
+          creator:
+            type: string
   QueryParamsResponse:
     type: object
     properties:
@@ -65,7 +278,35 @@ definitions:
         type: object
   workload.Params:
     type: object
+  workload.Workload:
+    type: object
+    properties:
+      id:
+        type: string
+        format: uint64
+      epoch:
+        type: string
+        format: uint64
+      minerId:
+        type: string
+      score:
+        type: string
+        format: uint64
+      managerId:
+        type: string
+      creator:
+        type: string
+  MsgCreateWorkloadResponse:
+    type: object
+    properties:
+      id:
+        type: string
+        format: uint64
+  MsgDeleteWorkloadResponse:
+    type: object
   MsgUpdateParamsResponse:
+    type: object
+  MsgUpdateWorkloadResponse:
     type: object
   Params:
     type: object
